--- a/app/src/main/res/drawable/background_left.xml
+++ b/app/src/main/res/drawable/background_left.xml
@@ -1,5 +1,5 @@
 <!-- background_left.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E1B42C"/>
+    <solid android:color="#FF5722"/>
     <corners android:radius="12dp"/>
 </shape>
