--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -2,14 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
+    <!-- Layout para a mensagem -->
     <LinearLayout
         android:id="@+id/messageLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/message_background"
+        android:padding="8dp"
+        android:elevation="2dp"
+        android:layout_margin="8dp"
+        android:minHeight="48dp">
 
+    <!-- Texto da mensagem -->
         <TextView
             android:id="@+id/messageTextView"
             android:layout_width="wrap_content"
@@ -17,8 +25,9 @@
             android:padding="10dp"
             android:textColor="@android:color/white"
             android:textSize="16sp"
-            android:layout_margin="8dp" />
-
+            android:maxWidth="250dp"
+            android:ellipsize="end"
+            android:maxLines="5" />
     </LinearLayout>
 
 </LinearLayout>
