--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#6200EE</color>
+    <color name="primaryColorDark">#3700B3</color>
+    <color name="accentColor">#03DAC5</color>
+    <color name="backgroundColor">#FFFFFF</color>
+    <color name="grayColor">#808080</color>
+    <color name="secondaryTextColor">#757575</color>
+    <color name="primaryTextColor">#212121</color>
+    <color name="secondaryColor">#FF5722</color>
 </resources>
